--- a/Puntonet/Puntonet.Web/appsettings.json
+++ b/Puntonet/Puntonet.Web/appsettings.json
@@ -1,15 +1,15 @@
-﻿{
+{
   "Data": {
     "Default": {
-      "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=Puntonet_Default_v1;Integrated Security=true",
+      "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=Puntonet_Default_v1;Integrated Security=true; Trusted_Connection=true",
       "ProviderName": "System.Data.SqlClient"
     },
     "Northwind": {
-      "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=Puntonet_Northwind_v1;Integrated Security=true",
+      "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=Puntonet_Northwind_v1;Integrated Security=true, Trusted_Connection=true",
       "ProviderName": "System.Data.SqlClient"
     },
     "WorkLog": {
-      "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=Puntonet_Default_v1;Integrated Security=true",
+      "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=Puntonet_Default_v1;Integrated Security=true, Trusted_Connection=true",
       "ProviderName": "System.Data.SqlClient"
     }
   },
